Fix compilation errors and verify critical medicine logic fixes
- Fixed type mismatch in GroupLogicTest.kt (deleteMedicine parameter)
- Fixed assertTrue parameter order in GroupDataPersistenceTest.kt
- Verified EveryOtherDayProblemTest and DosageCalculatorDebugTest pass
- Confirmed project builds successfully with gradlew.bat assembleDebug
- Updated TODO_PLAN.md to reflect completed tasks
- Main issue with medicines disappearing after editing is resolved
- Project compilation and critical tests are now working

Status: Core functionality fixed, ready for next priority issues